--- a/FlowCrypt/src/main/res/navigation/nav_graph.xml
+++ b/FlowCrypt/src/main/res/navigation/nav_graph.xml
@@ -53,6 +53,22 @@
         <deepLink
             android:id="@+id/deepLink"
             app:uri="flowcrypt://email.flowcrypt.com/settings/keys" />
+        <action
+            android:id="@+id/action_privateKeysListFragment_to_privateKeyDetailsFragment"
+            app:destination="@id/privateKeyDetailsFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/privateKeyDetailsFragment"
+        android:name="com.flowcrypt.email.ui.activity.fragment.PrivateKeyDetailsFragment"
+        android:label="PrivateKeyDetailsFragment"
+        tools:layout="@layout/fragment_private_key_details">
+        <argument
+            android:name="fingerprint"
+            app:argType="string" />
+        <deepLink
+            android:id="@+id/deepLink"
+            app:uri="flowcrypt://email.flowcrypt.com/settings/keys/details" />
     </fragment>
 
     <fragment
