Issue 1310 migrate settings to navigation (#1311)
* Added AttesterSettingsFragment to nav_graph.xml. Modified AttesterSettingsActivityTest.| #1310

* Renamed LegalSettingsActivity to LegalSettingsFragment.| #1310

* Added LegalSettingsFragment.kt to nav_graph.xml. Modified LegalSettingsFragmentTest. Refactored code.| #1310

* LegalSettingsFragment. Modified fragment_legal.xml.| #1310

* Added NotificationsSettingsFragment to nav_graph.xml.| #1310

* Added SecuritySettingsFragment to nav_graph.xml.| #1310

* Added PrivateKeysListFragment to nav_graph.xml.| #1310

* Added PrivateKeyDetailsFragment to nav_graph.xml.| #1310

* Added ExperimentalSettingsFragment and MainDevPreferencesFragment to nav_graph.xml.| #1310

* Added ContactsListFragment.kt to nav_graph.xml.| #1310

* Added PublicKeyDetailsFragmentTest.kt to nav_graph.xml.| #1310

* Refactored code.| #1310

* Fixed tests. Refactored code.| #1310

* Fixed lint warnings.| #1310

--- a/FlowCrypt/src/main/res/xml/preferences_main_settings.xml
+++ b/FlowCrypt/src/main/res/xml/preferences_main_settings.xml
@@ -8,49 +8,32 @@
     <Preference
         android:key="@string/pref_key_backups"
         android:title="@string/backups"
-        app:iconSpaceReserved="false">
-    </Preference>
+        app:iconSpaceReserved="false" />
 
     <Preference
-        android:key="@string/preferences_key_settings_security"
+        android:key="@string/pref_key_security"
         android:title="@string/security_and_privacy"
-        app:iconSpaceReserved="false">
-        <intent
-            android:targetClass="com.flowcrypt.email.ui.activity.settings.SecurityAndPrivacySettingsActivity"
-            android:targetPackage="@string/application_id" />
-    </Preference>
+        app:iconSpaceReserved="false" />
 
     <Preference
+        android:key="@string/pref_key_contacts"
         android:title="@string/contacts"
-        app:iconSpaceReserved="false">
-        <intent
-            android:targetClass="com.flowcrypt.email.ui.activity.settings.ContactsSettingsActivity"
-            android:targetPackage="@string/application_id" />
-    </Preference>
+        app:iconSpaceReserved="false" />
 
     <Preference
+        android:key="@string/pref_key_keys"
         android:title="@string/keys"
-        app:iconSpaceReserved="false">
-        <intent
-            android:targetClass="com.flowcrypt.email.ui.activity.settings.KeysSettingsActivity"
-            android:targetPackage="@string/application_id" />
-    </Preference>
+        app:iconSpaceReserved="false" />
 
     <Preference
+        android:key="@string/pref_key_attester"
         android:title="@string/attester"
-        app:iconSpaceReserved="false">
-        <intent
-            android:targetClass="com.flowcrypt.email.ui.activity.settings.AttesterSettingsActivity"
-            android:targetPackage="@string/application_id" />
-    </Preference>
+        app:iconSpaceReserved="false" />
 
     <Preference
+        android:key="@string/pref_key_notification"
         android:title="@string/notifications"
-        app:iconSpaceReserved="false">
-        <intent
-            android:targetClass="com.flowcrypt.email.ui.activity.settings.NotificationsSettingsActivity"
-            android:targetPackage="@string/application_id" />
-    </Preference>
+        app:iconSpaceReserved="false" />
 
     <Preference
         android:key="@string/pref_key_server_settings"
@@ -59,18 +42,12 @@
         app:isPreferenceVisible="false" />
 
     <Preference
+        android:key="@string/pref_key_legal"
         android:title="@string/legal"
-        app:iconSpaceReserved="false">
-        <intent
-            android:targetClass="com.flowcrypt.email.ui.activity.settings.LegalSettingsActivity"
-            android:targetPackage="@string/application_id" />
-    </Preference>
+        app:iconSpaceReserved="false" />
 
     <Preference
+        android:key="@string/pref_key_experimental"
         android:title="@string/experimental"
-        app:iconSpaceReserved="false">
-        <intent
-            android:targetClass="com.flowcrypt.email.ui.activity.settings.ExperimentalSettingsActivity"
-            android:targetPackage="@string/application_id" />
-    </Preference>
+        app:iconSpaceReserved="false" />
 </PreferenceScreen>
