--- a/FlowCrypt/src/main/res/layout/fragment_recheck_provided_passphrase.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_recheck_provided_passphrase.xml
@@ -2,6 +2,7 @@
   ~ © 2016-present FlowCrypt a.s. Limitations apply. Contact human@flowcrypt.com
   ~ Contributors: DenBond7
   -->
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -17,51 +18,34 @@
         tools:text="@string/set_up_flow_crypt" />
 
     <TextView
-        android:id="@+id/tVChoosingSecurePass"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/tVRepeatPassphraseHint"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/layout_height_sub_header"
         android:layout_gravity="center_vertical"
+        android:layout_marginTop="@dimen/default_margin_content_big"
         android:layout_weight="1"
         android:gravity="center"
-        android:text="@string/see_choosing_secure_pass_phrases"
+        android:text="@string/repeat_passphrase_hint"
         android:textColor="@android:color/black"
-        app:layout_constraintBottom_toBottomOf="@+id/iBShowPasswordHint"
-        app:layout_constraintEnd_toStartOf="@+id/iBShowPasswordHint"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-        app:layout_constraintTop_toTopOf="@+id/iBShowPasswordHint" />
-
-    <ImageButton
-        android:id="@+id/iBShowPasswordHint"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginTop="32dp"
-        android:background="?android:attr/selectableItemBackgroundBorderless"
-        android:contentDescription="@string/see_choosing_secure_pass_phrases"
-        android:padding="@dimen/default_margin_content_small"
         app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/tVChoosingSecurePass"
-        app:layout_constraintTop_toBottomOf="@+id/tVTitle"
-        app:srcCompat="@mipmap/ic_help_grey" />
+        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
+        app:layout_constraintTop_toBottomOf="@+id/tVTitle" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/tILPassphrase"
+        android:id="@+id/tILayoutRepeatPassphrase"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_top_password_layout"
-        android:hint="@string/enter_new_pass_phrase"
+        android:hint="@string/repeat_pass_phrase"
         app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-        app:layout_constraintTop_toBottomOf="@+id/iBShowPasswordHint"
+        app:layout_constraintTop_toBottomOf="@+id/tVRepeatPassphraseHint"
         app:passwordToggleContentDescription="description"
         app:passwordToggleEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/eTPassphrase"
+            android:id="@+id/eTRepeatedPassphrase"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@null"
@@ -70,46 +54,36 @@
             android:inputType="textPassword" />
 
         <ProgressBar
-            android:id="@+id/pBarPassphraseQuality"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
             android:layout_height="@dimen/default_margin_content_small"
             android:progress="0" />
 
-        <TextView
-            android:id="@+id/tVPassphraseQuality"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/default_margin_small"
-            android:gravity="center"
-            tools:text="WEAK (average time to crack: 13 seconds)" />
-
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/btSetPassphrase"
+        android:id="@+id/btConfirmPassphrase"
         style="@style/AppWidget.Button"
         android:layout_width="0dp"
         android:layout_marginTop="@dimen/default_margin_content_big"
-        android:text="@string/set_pass_phrase"
+        android:text="@string/confirm_pass_phrase"
+        android:theme="@style/AppWidget.Button.Green"
+        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
+        app:layout_constraintTop_toBottomOf="@+id/tILayoutRepeatPassphrase" />
+
+    <Button
+        android:id="@+id/btUseAnotherPassphrase"
+        style="@style/AppWidget.Button"
+        android:layout_width="0dp"
+        android:layout_marginTop="@dimen/margin_between_buttons"
+        android:text="@string/use_another_pass_phrase"
         android:theme="@style/AppWidget.Button.SilverWithWhiteText"
         app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-        app:layout_constraintTop_toBottomOf="@+id/tILPassphrase" />
-
-    <TextView
-        android:id="@+id/tVLostPassphraseWarning"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/default_margin_content_big"
-        android:gravity="center"
-        android:text="@string/loss_of_this_pass_phrase_cannot_be_recovered"
-        android:textColor="@color/gray"
-        android:textSize="@dimen/default_text_size_medium"
-        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
-        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-        app:layout_constraintTop_toBottomOf="@+id/btSetPassphrase" />
+        app:layout_constraintTop_toBottomOf="@+id/btConfirmPassphrase" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineLeft"
@@ -138,5 +112,6 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_end="@dimen/default_margin_content" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
