--- a/FlowCrypt/src/main/res/layout/fragment_info_in_webview.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_info_in_webview.xml
@@ -15,9 +15,22 @@
         android:layout_height="0dp"
         android:layout_marginStart="@dimen/default_margin_content_small"
         android:layout_marginEnd="@dimen/default_margin_content_small"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/buttonOk"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/buttonOk"
+        style="?android:attr/buttonBarButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/default_margin_content_small"
+        android:layout_marginBottom="@dimen/default_margin_content_small"
+        android:text="@android:string/ok"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
