Issue #1303 improve apply passphrase for new or incoming (#1315)
* Renamed ChangePassPhraseActivity to ChangePassphraseOfImportedKeysFragment.| #1303

* wip| #1303

* Renamed ChangePassphraseOfImportedKeysFragment to ApplyNewPassphraseFirstStepFragment.| #1303

* ApplyNewPassphraseFirstStepFragment. Added some logic. Modified InfoDialogFragment to b able to show content in WebView.| #1303

* ApplyNewPassphraseFirstStepFragment. Added more logic.| #1303

* Renamed ApplyNewPassphraseFirstStepFragment to CheckPassphraseStrengthFragment.| #1303

* Renamed some resources.| #1303

* Moved CheckPassphraseStrengthFragment to ui/activity/fragment.| #1303

* Added RecheckProvidedPassphraseFragment.| #1303

* Added ChangePassphraseOfImportedKeysFragment.| #1303

* Modified navigation between fragments.| #1303

* Fixed navigation in BackupKeysFragment.| #1303

* Improved navigation between fragments.| #1303

* Fixed a bug in ChangePassphraseOfImportedKeysFragment.| #1303

* Refactored code.| #1303

* Restored fragment_info_in_webview.xml.| #1303

* Fixed intent in SystemNotificationManager.| #1303

* Modified tests. Refactored code.| #1303

* Fixed lint warnings.| #1303

--- a/FlowCrypt/src/main/res/navigation/nav_graph.xml
+++ b/FlowCrypt/src/main/res/navigation/nav_graph.xml
@@ -49,6 +49,79 @@
         <deepLink
             android:id="@+id/deepLink"
             app:uri="flowcrypt://email.flowcrypt.com/settings/security" />
+        <action
+            android:id="@+id/action_securitySettingsFragment_to_checkPassphraseStrengthFragment"
+            app:destination="@id/checkPassphraseStrengthFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/checkPassphraseStrengthFragment"
+        android:name="com.flowcrypt.email.ui.activity.fragment.CheckPassphraseStrengthFragment"
+        android:label="CheckPassphraseStrengthFragment"
+        tools:layout="@layout/fragment_check_passphrase_strength">
+        <argument
+            android:name="popBackStackIdIfSuccess"
+            app:argType="integer" />
+        <argument
+            android:name="title"
+            app:argType="string" />
+        <action
+            android:id="@+id/action_checkPassphraseStrengthFragment_to_recheckProvidedPassphraseFragment"
+            app:destination="@id/recheckProvidedPassphraseFragment" />
+        <deepLink
+            android:id="@+id/deepLink"
+            app:uri="flowcrypt://email.flowcrypt.com/settings/security/check_passphrase" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/recheckProvidedPassphraseFragment"
+        android:name="com.flowcrypt.email.ui.activity.fragment.RecheckProvidedPassphraseFragment"
+        android:label="RecheckProvidedPassphraseFragment"
+        tools:layout="@layout/fragment_recheck_provided_passphrase">
+        <argument
+            android:name="popBackStackIdIfSuccess"
+            app:argType="integer" />
+        <argument
+            android:name="title"
+            app:argType="string" />
+        <argument
+            android:name="passphrase"
+            app:argType="string" />
+        <deepLink
+            android:id="@+id/deepLink"
+            app:uri="flowcrypt://email.flowcrypt.com/settings/security/recheck_passphrase" />
+        <action
+            android:id="@+id/action_recheckProvidedPassphraseFragment_to_changePassphraseOfImportedKeysFragment"
+            app:destination="@id/changePassphraseOfImportedKeysFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/changePassphraseOfImportedKeysFragment"
+        android:name="com.flowcrypt.email.ui.activity.fragment.ChangePassphraseOfImportedKeysFragment"
+        android:label="ChangePassphraseOfImportedKeysFragment"
+        tools:layout="@layout/fragment_change_passphrase_of_imported_keys">
+        <argument
+            android:name="popBackStackIdIfSuccess"
+            app:argType="integer" />
+        <argument
+            android:name="title"
+            app:argType="string" />
+        <argument
+            android:name="subTitle"
+            app:argType="string" />
+        <argument
+            android:name="passphrase"
+            app:argType="string" />
+        <argument
+            android:name="accountEntity"
+            app:argType="com.flowcrypt.email.database.entity.AccountEntity" />
+        <deepLink
+            android:id="@+id/deepLink"
+            app:uri="flowcrypt://email.flowcrypt.com/settings/security/change_passphrase" />
+        <action
+            android:id="@+id/action_changePassphraseOfImportedKeysFragment_to_backupKeysFragment"
+            app:destination="@id/backupKeysFragment"
+            app:popUpTo="@id/mainSettingsFragment" />
     </fragment>
 
     <fragment
@@ -196,6 +269,9 @@
         <deepLink
             android:id="@+id/deepLink"
             app:uri="flowcrypt://email.flowcrypt.com/settings/make_backup" />
+        <action
+            android:id="@+id/action_backupKeysFragment_to_checkPassphraseStrengthFragment"
+            app:destination="@id/checkPassphraseStrengthFragment" />
     </fragment>
 
     <fragment
@@ -287,6 +363,10 @@
             app:argType="boolean" />
         <argument
             android:name="hasHtml"
+            android:defaultValue="false"
+            app:argType="boolean" />
+        <argument
+            android:name="useWebViewToRender"
             android:defaultValue="false"
             app:argType="boolean" />
         <argument
