--- a/FlowCrypt/src/main/res/layout/activity_sign_in.xml
+++ b/FlowCrypt/src/main/res/layout/activity_sign_in.xml
@@ -16,9 +16,15 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:defaultNavHost="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:layout="@layout/fragment_main_sign_in" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/sing_in_graph" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
