--- a/FlowCrypt/src/main/res/navigation/sing_in_graph.xml
+++ b/FlowCrypt/src/main/res/navigation/sing_in_graph.xml
@@ -20,6 +20,9 @@
         <action
             android:id="@+id/action_mainSignInFragment_to_authorizeAndSearchBackupsFragment"
             app:destination="@id/authorizeAndSearchBackupsFragment" />
+        <action
+            android:id="@+id/action_mainSignInFragment_to_checkPassphraseStrengthFragment"
+            app:destination="@id/checkPassphraseStrengthFragment" />
     </fragment>
     <fragment
         android:id="@+id/addOtherAccountFragment"
@@ -44,6 +47,155 @@
         android:name="com.flowcrypt.email.ui.activity.fragment.UserRecoverableAuthExceptionFragment"
         android:label="UserRecoverableAuthExceptionFragment"
         tools:layout="@layout/fragment_user_recoverable_auth_exception" />
+
+    <fragment
+        android:id="@+id/checkPassphraseStrengthFragment"
+        android:name="com.flowcrypt.email.ui.activity.fragment.CheckPassphraseStrengthFragment"
+        android:label="CheckPassphraseStrengthFragment"
+        tools:layout="@layout/fragment_check_passphrase_strength">
+        <argument
+            android:name="popBackStackIdIfSuccess"
+            app:argType="integer" />
+        <argument
+            android:name="title"
+            app:argType="string" />
+        <action
+            android:id="@+id/action_checkPassphraseStrengthFragment_to_recheckProvidedPassphraseFragment"
+            app:destination="@id/recheckProvidedPassphraseFragment" />
+        <deepLink
+            android:id="@+id/deepLink"
+            app:uri="flowcrypt://email.flowcrypt.com/settings/security/check_passphrase" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/recheckProvidedPassphraseFragment"
+        android:name="com.flowcrypt.email.ui.activity.fragment.RecheckProvidedPassphraseFragment"
+        android:label="RecheckProvidedPassphraseFragment"
+        tools:layout="@layout/fragment_recheck_provided_passphrase">
+        <argument
+            android:name="popBackStackIdIfSuccess"
+            app:argType="integer" />
+        <argument
+            android:name="title"
+            app:argType="string" />
+        <argument
+            android:name="passphrase"
+            app:argType="string" />
+        <deepLink
+            android:id="@+id/deepLink"
+            app:uri="flowcrypt://email.flowcrypt.com/settings/security/recheck_passphrase" />
+    </fragment>
+
+    <dialog
+        android:id="@+id/twoWayDialogFragment"
+        android:name="com.flowcrypt.email.ui.activity.fragment.dialog.TwoWayDialogFragment"
+        android:label="TwoWayDialogFragment">
+        <argument
+            android:name="requestCode"
+            android:defaultValue="0"
+            app:argType="integer" />
+        <argument
+            android:name="dialogTitle"
+            android:defaultValue="@null"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="dialogMsg"
+            android:defaultValue="@null"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="positiveButtonTitle"
+            android:defaultValue="@null"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="negativeButtonTitle"
+            android:defaultValue="@null"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="isCancelable"
+            android:defaultValue="true"
+            app:argType="boolean" />
+        <argument
+            android:name="hasHtml"
+            android:defaultValue="false"
+            app:argType="boolean" />
+        <argument
+            android:name="useLinkify"
+            android:defaultValue="false"
+            app:argType="boolean" />
+    </dialog>
+
+    <dialog
+        android:id="@+id/infoDialogFragment"
+        android:name="com.flowcrypt.email.ui.activity.fragment.dialog.InfoDialogFragment"
+        android:label="InfoDialogFragment">
+        <argument
+            android:name="requestCode"
+            android:defaultValue="0"
+            app:argType="integer" />
+        <argument
+            android:name="dialogTitle"
+            android:defaultValue="@null"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="dialogMsg"
+            android:defaultValue="@null"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="buttonTitle"
+            android:defaultValue="@null"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="isCancelable"
+            android:defaultValue="true"
+            app:argType="boolean" />
+        <argument
+            android:name="useNavigationUp"
+            android:defaultValue="false"
+            app:argType="boolean" />
+        <argument
+            android:name="hasHtml"
+            android:defaultValue="false"
+            app:argType="boolean" />
+        <argument
+            android:name="useWebViewToRender"
+            android:defaultValue="false"
+            app:argType="boolean" />
+        <argument
+            android:name="useLinkify"
+            android:defaultValue="false"
+            app:argType="boolean" />
+    </dialog>
+
+    <dialog
+        android:id="@+id/fixNeedPassphraseIssueDialogFragment"
+        android:name="com.flowcrypt.email.ui.activity.fragment.dialog.FixNeedPassphraseIssueDialogFragment"
+        android:label="FixNeedPassphraseIssueDialogFragment"
+        tools:layout="@layout/fragment_fix_empty_passphrase">
+        <argument
+            android:name="fingerprints"
+            app:argType="string[]"
+            app:nullable="true" />
+        <argument
+            android:name="logicType"
+            app:argType="com.flowcrypt.email.ui.activity.fragment.dialog.FixNeedPassphraseIssueDialogFragment$LogicType" />
+    </dialog>
+
+    <action
+        android:id="@+id/action_global_twoWayDialogFragment"
+        app:destination="@id/twoWayDialogFragment" />
+    <action
+        android:id="@+id/action_global_infoDialogFragment"
+        app:destination="@id/infoDialogFragment" />
+    <action
+        android:id="@+id/action_global_fixNeedPassphraseIssueDialogFragment"
+        app:destination="@id/fixNeedPassphraseIssueDialogFragment" />
     <action
         android:id="@+id/action_global_userRecoverableAuthExceptionFragment"
         app:destination="@id/userRecoverableAuthExceptionFragment" />
