--- a/FlowCrypt/src/main/res/layout/fragment_check_passphrase_strength.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_check_passphrase_strength.xml
@@ -104,12 +104,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/default_margin_content_big"
         android:gravity="center"
-        android:text="@string/loss_of_this_pass_phrase_cannot_be_recovered"
         android:textColor="@color/gray"
         android:textSize="@dimen/default_text_size_medium"
         app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
         app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-        app:layout_constraintTop_toBottomOf="@+id/btSetPassphrase" />
+        app:layout_constraintTop_toBottomOf="@+id/btSetPassphrase"
+        tools:text="@string/loss_of_this_pass_phrase_cannot_be_recovered" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineLeft"
