--- a/FlowCrypt/src/main/res/navigation/sing_in_graph.xml
+++ b/FlowCrypt/src/main/res/navigation/sing_in_graph.xml
@@ -23,6 +23,9 @@
         <action
             android:id="@+id/action_mainSignInFragment_to_checkPassphraseStrengthFragment"
             app:destination="@id/checkPassphraseStrengthFragment" />
+        <deepLink
+            android:id="@+id/deepLink"
+            app:uri="flowcrypt://email.flowcrypt.com/sing-in/gmail" />
     </fragment>
     <fragment
         android:id="@+id/addOtherAccountFragment"
@@ -32,6 +35,9 @@
         <action
             android:id="@+id/action_addOtherAccountFragment_to_authorizeAndSearchBackupsFragment"
             app:destination="@id/authorizeAndSearchBackupsFragment" />
+        <deepLink
+            android:id="@+id/deepLink"
+            app:uri="flowcrypt://email.flowcrypt.com/sing-in/other" />
     </fragment>
     <fragment
         android:id="@+id/authorizeAndSearchBackupsFragment"
@@ -67,9 +73,6 @@
         <action
             android:id="@+id/action_checkPassphraseStrengthFragment_to_recheckProvidedPassphraseFragment"
             app:destination="@id/recheckProvidedPassphraseFragment" />
-        <deepLink
-            android:id="@+id/deepLink"
-            app:uri="flowcrypt://email.flowcrypt.com/settings/security/check_passphrase" />
     </fragment>
 
     <fragment
@@ -86,9 +89,6 @@
         <argument
             android:name="passphrase"
             app:argType="string" />
-        <deepLink
-            android:id="@+id/deepLink"
-            app:uri="flowcrypt://email.flowcrypt.com/settings/security/recheck_passphrase" />
     </fragment>
 
     <dialog
