issue #1168 ekm integration (#1316)
* Refactored code.| #1168

* Added some methods to OrgRules.| #1168

* Fixed errors after merge

* Fixed OrgRules. Added skipping 'googlemail.com'.| #1168

* Renamed EnterpriseDomainRulesViewModel to EkmLoginViewModel.| #1168

* Modified EkmLoginViewModel. Added a dialog with 'retry' button in MainSignInFragment.| #1168

* Handled a case when orgRules.usesKeyManager() == false.| #1168

* Added handling of OrgRulesCombinationNotSupportedException.| #1168

* Modifed logic in EkmLoginViewModel.| #1168

* Added '<ekm>/v1/keys/private' API things.| #1168

* Fixed compilation errors after merge.| #1168

* Added handling errors for EkmPrivateKeysResponse.| #1168

* Added 'Key' model. Modifed EkmPrivateKeysResponse.| #1168

* Added showing an error if there are no private keys for a user(EKM).| #1168

* Refactored code.| #1168

* Rename EkmLoginViewModel to LoginViewModel.| #1168

* Exported logic to separate ViewModel(s). Refactored code.| #1168

* Improved retry police.| #1168

* Simplified logic of cheking for unsupported OrgRules combination.| #1168

* Refactored code.| #1168

* Changed logic in RecheckProvidedPassphraseFragment to return a new passphrase to the caller. Refactored code.| #1168

* Migrated SignInActivity to Navigation.| #1168

* Refactored code.| #1168

* Fixed navigation in sing_in_graph.xml| #1168

* Added saving prv keys that were received from EKM to the local database.| #1168

* Added configurable lost passphrase hint.| #1168

* EkmViewModel. Added checking that all fetched keys is fully decrypted.| #1168

* Modified logi of saving prv keys to the local database.| #1168

* Fixed a bug in PgpKey after code refactoring.| #1168

* Fixed typo.| #1168

* Improved parsing keys in EkmViewModel.| #1168

* Fixed typo.| #1168

* Fixed AddOtherAccountFragmentTest.| #1168

* Fixed SignInActivityEnterpriseTest.| #1168

* Fixed JUnit tests.| #1168

* Fixed li

--- a/FlowCrypt/src/main/res/navigation/nav_graph.xml
+++ b/FlowCrypt/src/main/res/navigation/nav_graph.xml
@@ -52,6 +52,9 @@
         <action
             android:id="@+id/action_securitySettingsFragment_to_checkPassphraseStrengthFragment"
             app:destination="@id/checkPassphraseStrengthFragment" />
+        <action
+            android:id="@+id/action_securitySettingsFragment_to_changePassphraseOfImportedKeysFragment"
+            app:destination="@id/changePassphraseOfImportedKeysFragment" />
     </fragment>
 
     <fragment
@@ -65,6 +68,11 @@
         <argument
             android:name="title"
             app:argType="string" />
+        <argument
+            android:name="lostPassphraseTitle"
+            android:defaultValue="@null"
+            app:argType="string"
+            app:nullable="true" />
         <action
             android:id="@+id/action_checkPassphraseStrengthFragment_to_recheckProvidedPassphraseFragment"
             app:destination="@id/recheckProvidedPassphraseFragment" />
@@ -90,9 +98,6 @@
         <deepLink
             android:id="@+id/deepLink"
             app:uri="flowcrypt://email.flowcrypt.com/settings/security/recheck_passphrase" />
-        <action
-            android:id="@+id/action_recheckProvidedPassphraseFragment_to_changePassphraseOfImportedKeysFragment"
-            app:destination="@id/changePassphraseOfImportedKeysFragment" />
     </fragment>
 
     <fragment
@@ -272,6 +277,9 @@
         <action
             android:id="@+id/action_backupKeysFragment_to_checkPassphraseStrengthFragment"
             app:destination="@id/checkPassphraseStrengthFragment" />
+        <action
+            android:id="@+id/action_backupKeysFragment_to_changePassphraseOfImportedKeysFragment"
+            app:destination="@id/changePassphraseOfImportedKeysFragment" />
     </fragment>
 
     <fragment
