--- a/FlowCrypt/src/main/res/layout/fragment_private_keys.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_private_keys.xml
@@ -8,7 +8,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:animateLayoutChanges="true">
 
     <ProgressBar
         android:id="@+id/progressBar"
