--- a/FlowCrypt/src/main/res/navigation/sing_in_graph.xml
+++ b/FlowCrypt/src/main/res/navigation/sing_in_graph.xml
@@ -52,8 +52,16 @@
         android:id="@+id/userRecoverableAuthExceptionFragment"
         android:name="com.flowcrypt.email.ui.activity.fragment.UserRecoverableAuthExceptionFragment"
         android:label="UserRecoverableAuthExceptionFragment"
-        tools:layout="@layout/fragment_user_recoverable_auth_exception" />
-
+        tools:layout="@layout/fragment_user_recoverable_auth_exception">
+        <deepLink
+            android:id="@+id/deepLink"
+            app:uri="flowcrypt://email.flowcrypt.com/sign-in/recover_auth" />
+        <argument
+            android:name="recoverableIntent"
+            android:defaultValue="@null"
+            app:argType="android.content.Intent"
+            app:nullable="true" />
+    </fragment>
     <fragment
         android:id="@+id/checkPassphraseStrengthFragment"
         android:name="com.flowcrypt.email.ui.activity.fragment.CheckPassphraseStrengthFragment"
